fix vertical alignment (again)

--- a/stylesheets/drunk-index-calculator.css
+++ b/stylesheets/drunk-index-calculator.css
@@ -5,7 +5,7 @@
 
 body {
     align-items: center;
-    left: 150px;
+    padding-left: 300px;
 }
   
 #all-container {
